# intel-ml

./: CMakeLists.txt  LICENCE  README.md
src/: log.hpp  main.cpp  tensor.hpp
